:lipstick: Fixed mobile side nav visibility issue

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -41,6 +41,7 @@ body {
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			background-color: color('blue', 'base');
 
 			.switch {
 				display: flex;
